Bug 418572 - Errors when pressing F4 on a remote folder
Summary: Errors when pressing F4 on a remote folder
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krusader Bugs Distribution List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-03-07 08:00 UTC by Toni Asensi Esteve
Modified: 2020-03-10 21:32 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Toni Asensi Esteve 2020-03-07 08:00:26 UTC
If F4 is pressed on a remote folder, then an empty file is edited, and an error message is shown.
Comment 1 Toni Asensi Esteve 2020-03-07 08:00:42 UTC
There's a proposed solution in https://phabricator.kde.org/D27819
Comment 2 Toni Asensi Esteve 2020-03-10 21:32:02 UTC
Git commit 68094ed9b1295773e94094fd132820a21c4513ad by Toni Asensi Esteve.
Committed on 10/03/2020 at 21:25.
Pushed by asensi into branch 'master'.

Solve what happens when F4 (or equivalent) is pressed on a remote folder

In more detail: If F4 (or equivalent) is pressed on a remote folder, then an empty file is edited, and an error message is shown.

Notes:
    This also happened before applying
        Manage what happens when a PanelViewerBase (e.g. using Shift+F3) tries to open a nonexistent local file
        https://phabricator.kde.org/D27258
    or
        Manage the use of Shift+F4 when opening a local file that exists, or a remote folder or remote file that exists
        https://phabricator.kde.org/D27259
    though some of the code that was introduced in https://phabricator.kde.org/D27259 was reused in the present code review.

Test Plan:
    Using F4 to try to open a:
        - local file that exists: /etc/passwd
        - local folder that exists: /etc
        - remote folder: smb://user@IP_ADDRESS/PATH/EXISTENT_FOLDER
        - remote folder: fish://user@IP_ADDRESS:PORT/PATH/EXISTENT_FOLDER

    Using Shift+F4 to try to open a:
        - local file that exists: /etc/passwd
        - local folder that exists: /etc
        - remote folder: smb://user@IP_ADDRESS/PATH/EXISTENT_FOLDER
        - remote folder: fish://user@IP_ADDRESS:PORT/PATH/EXISTENT_FOLDER

    Performing the tests using the default internal editor and also /usr/bin/kate.

    Performing the tests using e.g. Kubuntu 18.04 LTS and Kubuntu 19.10.

FIXED: [ 418572 ] Errors when pressing F4 on a remote folder

Differential Revision: https://phabricator.kde.org/D27819

M  +15   -10   krusader/Panel/panelfunc.cpp

https://commits.kde.org/krusader/68094ed9b1295773e94094fd132820a21c4513ad