Solve what happens when F4 (or equivalent) is pressed on a remote folder

In more detail: If F4 (or equivalent) is pressed on a remote folder, then an empty file is edited, and an error message is shown.

Notes:
    This also happened before applying
        Manage what happens when a PanelViewerBase (e.g. using Shift+F3) tries to open a nonexistent local file
        https://phabricator.kde.org/D27258
    or
        Manage the use of Shift+F4 when opening a local file that exists, or a remote folder or remote file that exists
        https://phabricator.kde.org/D27259
    though some of the code that was introduced in https://phabricator.kde.org/D27259 was reused in the present code review.

Test Plan:
    Using F4 to try to open a:
        - local file that exists: /etc/passwd
        - local folder that exists: /etc
        - remote folder: smb://user@IP_ADDRESS/PATH/EXISTENT_FOLDER
        - remote folder: fish://user@IP_ADDRESS:PORT/PATH/EXISTENT_FOLDER

    Using Shift+F4 to try to open a:
        - local file that exists: /etc/passwd
        - local folder that exists: /etc
        - remote folder: smb://user@IP_ADDRESS/PATH/EXISTENT_FOLDER
        - remote folder: fish://user@IP_ADDRESS:PORT/PATH/EXISTENT_FOLDER

    Performing the tests using the default internal editor and also /usr/bin/kate.

    Performing the tests using e.g. Kubuntu 18.04 LTS and Kubuntu 19.10.

FIXED: [ 418572 ] Errors when pressing F4 on a remote folder
BUG: 418572

Differential Revision: https://phabricator.kde.org/D27819